organize and comment

--- a/Analysis/PostProcessor/ppsettings.json
+++ b/Analysis/PostProcessor/ppsettings.json
@@ -1,1 +1,1 @@
-{"defaultpath": "C:/Labview Test Data/2018-11-07/Logfiles/CurrentTest"}
+{"defaultpath": "C:/Users/aspit/Documents/TestData/2018-10-10/Logfiles/TC1"}
