Add stats caculation adn remove pyc files

--- a/Analysis/PostProcessor/ppsettings.json
+++ b/Analysis/PostProcessor/ppsettings.json
@@ -1,1 +1,1 @@
-{"defaultpath": "C:/Labview Test Data/2018-11-07/Logfiles/CurrentTest"}
+{"defaultpath": "F:/Data/Raw Data/2018-11-08/Logfiles/TC_PXI_1"}
