add max and min to p2p file and test

--- a/Analysis/PostProcessor/ppsettings.json
+++ b/Analysis/PostProcessor/ppsettings.json
@@ -1,1 +1,1 @@
-{"defaultpath": "C:/Users/aspit/Documents/TestData/2018-10-10/Logfiles/TC1"}
+{"defaultpath": "F:/Data/Raw Data/2018-11-08/Logfiles/Current_PXI_1"}
